# egui-on-spin

./: Makefile  README.md  spin.toml
egui-endpoint/: .gitignore  Cargo.toml  index.html
egui-endpoint/assets/: sw.js
egui-endpoint/src/: app.rs  lib.rs  main.rs
