[package]
name = "egui-endpoint"
authors = ["Ultrabug <ultrabug@redacted.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }

# We enable persistence but dont use it (yet)
eframe = { version = "0.22.0", features = ["persistence", "serde"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
tracing-wasm = "0.2.1"
